--- a/public/404.html
+++ b/public/404.html
@@ -1,67 +1,97 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
+  <meta charset="utf-8">
+  <title>お探しのページは見つかりません</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <style>
-  .rails-default-error-page {
-    background-color: #EFEFEF;
-    color: #2E2F30;
-    text-align: center;
-    font-family: arial, sans-serif;
-    margin: 0;
-  }
+  <style type="text/css">
+    html {
+      box-sizing: border-box;
+      font-family: "ui-sans-serif", "system-ui", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
+      line-height: 1;
+      font-size: 100%;
+    }
 
-  .rails-default-error-page div.dialog {
-    width: 95%;
-    max-width: 33em;
-    margin: 4em auto 0;
-  }
+    body {
+      padding-top: 6rem;
+      padding-left: 1rem;
+      padding-right: 1rem;
+    }
 
-  .rails-default-error-page div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
+    .error-message {
+      max-width: 24rem;
+      margin-inline: auto;
+    }
 
-  .rails-default-error-page h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
-  }
+    .error-message__header {
+      margin-bottom: 1.75rem;
+    }
 
-  .rails-default-error-page div.dialog > p {
-    margin: 0 0 1em;
-    padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
+    .error-message__title {
+      font-size: 5rem;
+      color: #0086AB;
+      text-align: center;
+      margin-top: 0;
+      margin-bottom: 0.75rem;
+    }
+
+    .error-message__subtitle {
+      font-size: 2rem;
+      text-align: center;
+      color: #0086AB;
+      margin-top: 0;
+      margin-bottom: 0;
+    }
+
+    .error-message__body {
+      font-size: 1rem;
+      text-align: center;
+    }
+
+    .error-message__content {
+      margin-bottom: 3.5rem;
+    }
+
+    .error-message__body p {
+      line-height: 1.6rem;
+      margin-top: 0;
+      margin-bottom: 0;
+    }
+
+    .error-message__body a {
+      display: block;
+      height: 3.5rem;
+      width: 11rem;
+      line-height: 3.5rem;
+      border-radius: 0.375rem;
+      text-decoration: none;
+      color: #FFFFFF;
+      background-color: #0086AB;
+      margin-inline: auto;
+      margin-top: 2rem;
+    }
+
+    .error-message__body a:hover {
+      background-color: #006c8a;
+    }
   </style>
 </head>
 
-<body class="rails-default-error-page">
-  <!-- This file lives in public/404.html -->
-  <div class="dialog">
-    <div>
-      <h1>The page you were looking for doesn't exist.</h1>
-      <p>You may have mistyped the address or the page may have moved.</p>
+<body>
+  <div class="error-message">
+    <header class="error-message__header">
+      <h1 class="error-message__title">404</h1>
+      <h2 class="error-message__subtitle">Not Found</h2>
+    </header>
+    <div class="error-message__body">
+      <div class="error-message__content">
+        <p>お探しのページは見つかりません。</p>
+        <p>URLが正しく入力されているか確認してください。</p>
+      </div>
+      <a href="/">トップページに戻る</a>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
   </div>
 </body>
+
 </html>
